v1.1.0: fix #1: refactor wrapWith options in partial, use boolean and number instead of string in options, add tab mode, add support for unresolved class

--- a/scss/_c-accordion.scss
+++ b/scss/_c-accordion.scss
@@ -6,6 +6,12 @@ Accordion
 	position: relative;
 
 	/*
+	Unresolved
+	----------------------- */
+	&.is-unresolved {
+	}
+
+	/*
 	Wrapper Item
 	----------------------- */
 	.accordion__item {
